fix compile (gcc7)

BUG: 379688